@@ -1,5 +1,16 @@
 2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Remove ‘lockerlist’ from global state of rlog(1).
+
+	* rlog.c (struct criteria): Add member ‘lockers’.
+	(lockerlist): Delete var.
+	(getlocker): Take 2nd arg ‘criteria’; use ‘criteria->lockers’.
+	(trunclocks): Take arg ‘criteria’; use ‘criteria->lockers’.
+	(main): Update initialization form of auto var ‘criteria’;
+	update calls to ‘getlocker’, ‘trunclocks’.
+
+2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Remove ‘authorlist’ from global state of rlog(1).
 
 	* rlog.c (struct criteria): Add member ‘authors’.
